# Galateia-Bot

./: .gitignore  README.md  app.py  message_sender.py  pyproject.toml  requirements.txt  test_whatsapp.py  whatsapp_helper.py
reports/: whatsapp_links_20241130_113458.csv
